--- a/main/index.html
+++ b/main/index.html
@@ -29,12 +29,12 @@
             </div>
         </header>
     
-        <main class="page p-3">
-            <div class="justify-content-center align-items-center">
-                <div class="crafting_app">
-                    <div id="crafting-app__title"></div>
-                    <div class="craffting-app_wrapper">
-                        <div class="crafting-app__recipe d-flex  justify-content-center vanila">
+        <main class="page">
+            <div class="justify-content-center align-items-center m-3">
+                <div class="crafting_app pt-3">
+                    <div id="crafting-app__title" class=""></div>
+                    <div class="craffting-app_wrapper d-flex  justify-content-center vanila">
+                        <div class="crafting-app__recipe">
                             <div class="recipe">
                                 <div class="recipe_input">
                                 </div>
@@ -49,7 +49,7 @@
                         <input type="search" class="search form-control" id="input" placeholder="Поиск"/>
                     </form>
 
-                    <div id="craffting-app__categories"></div>
+                    <div id="craffting-app__categories" class="mb-1" ></div>
 
                     <div class="" id="all-items">
                         <div class="crafting-app__items" id="vanila" style="display: block;">
