--- a/main/index.html
+++ b/main/index.html
@@ -33,7 +33,17 @@
                 <div class="craffting-app_wrapper d-flex  justify-content-center vanila">
                     <div class="crafting-app__recipe">
                         <div class="recipe">
-                            <div class="recipe_input"></div>
+                            <div class="recipe_input">
+                                <i></i>
+                                <i></i>
+                                <i></i>
+                                <i></i>
+                                <i></i>
+                                <i></i>
+                                <i></i>
+                                <i></i>
+                                <i></i>
+                            </div>
                             <div class="recipe_output">
                                 <i></i>
                             </div>
@@ -44,7 +54,7 @@
                     <input type="search" class="search form-control" id="input" placeholder="Поиск"/>
                 </form>
                 <div id="craffting-app__categories" class="mb-1"></div>
-                <div class="crafting-app__items" id="all-items"></div>  
+                <div class="crafting-app__items " id="all-items"></div>  
             </div>
         </main>
     
