--- a/main/index.html
+++ b/main/index.html
@@ -45,7 +45,7 @@
                     <input type="search" class="search form-control" id="input" placeholder="Поиск"/>
                 </form>
                 <div id="craffting-app__categories" class="mb-1"></div>
-                <div class="crafting-app__items " id="all-items"></div>  
+                <div class="crafting-app__items"></div>  
             </div>
         </main>
     
