--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,7 @@
         <main class="page p-4">
             <div class="crafting_app">
                 <div id="crafting-app__title"></div>
-                <div class="craffting-app_wrapper d-flex  justify-content-center vanila">
+                <div class="craffting-app_wrapper d-flex  justify-content-center ">
                     <div class="crafting-app__recipe">
                         <div class="recipe">
                             <div class="recipe_input">
