--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=viewport content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="src/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -33,8 +32,7 @@
                 <div class="craffting-app_wrapper d-flex  justify-content-center ">
                     <div class="crafting-app__recipe">
                         <div class="recipe">
-                            <div class="recipe_input">
-                            </div>
+                            <div class="recipe_input"></div>
                             <div class="recipe_output">
                                 <i></i>
                             </div>
