--- a/main/index.html
+++ b/main/index.html
@@ -16,9 +16,7 @@
     <title>CraftMine</title>
 </head>
 
-<body class="bg-dark d-flex justify-content-center">
-
-    <div class="container-xl">
+<body class="bg-dark container-xl">
         <header class="d-flex mb-4">
             <div class="header p-2">
                 <a href="/main" class="float-left p-2"><img src="SRC/craftmine.png" alt=""></a>
@@ -50,8 +48,6 @@
         <footer class="footer">
     
         </footer>
-    </div>
-
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/prashantchaudhary/ddslick/master/jquery.ddslick.min.js" ></script>
