--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,8 @@
                 <div class="craffting-app_wrapper d-flex  justify-content-center ">
                     <div class="crafting-app__recipe">
                         <div class="recipe">
-                            <div class="recipe_input"></div>
+                            <div class="recipe_input">
+                            </div>
                             <div class="recipe_output">
                                 <i></i>
                             </div>
