--- a/main/index.html
+++ b/main/index.html
@@ -58,6 +58,7 @@
     <script type="module" src="js/search.js"></script>
     <script type="module" src="js/categories.js"></script>
     <script type="module" src="js/craft_dbv.js"></script>
+    <script type="module" src="js/craft_dbr.js"></script>
 </body>
 
 </html>
