--- a/main/index.html
+++ b/main/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/Item-r.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>CraftMine</title>
+    <title>Рецепты майнкрафт</title>
 </head>
 
 <body class="bg-dark container-xl">
@@ -38,6 +38,11 @@
                                 <i></i>
                             </div>
                         </div>
+                    </div>
+                    <div class="recipe_control"> 
+                        <div class="recipe_control-btn recipe_control-btn_next">⯈</div>
+                        <div class="recipe_control-index"></div>
+                        <div class="recipe_control-btn recipe_control-btn_prev">⯇</div>
                     </div>
                 </div>
                 <form id="search-highlight" class="mb-1">
