--- a/main/index.html
+++ b/main/index.html
@@ -40,9 +40,9 @@
                         </div>
                     </div>
                     <div class="recipe_control"> 
-                        <div class="recipe_control-btn recipe_control-btn_next">⯈</div>
+                        <div class="recipe_control-btn recipe_control-btn_next recipe_control-active">⯈</div>
                         <div class="recipe_control-index"></div>
-                        <div class="recipe_control-btn recipe_control-btn_prev">⯇</div>
+                        <div class="recipe_control-btn recipe_control-btn_prev recipe_control-active">⯇</div>
                     </div>
                 </div>
                 <form id="search-highlight" class="mb-1">
