--- a/main/index.html
+++ b/main/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/item-v.css">
     <link rel="stylesheet" href="css/Item-r.css">
     <link rel="stylesheet" href="css/style.css">
-
     <title>Рецепты майнкрафт</title>
 </head>
 
@@ -40,9 +39,9 @@
                         </div>
                     </div>
                     <div class="recipe_control"> 
-                        <div class="recipe_control-btn recipe_control-btn_next recipe_control-active">⯈</div>
+                        <div class="recipe_control-btn recipe_control-btn_next">⯈</div>
                         <div class="recipe_control-index"></div>
-                        <div class="recipe_control-btn recipe_control-btn_prev recipe_control-active">⯇</div>
+                        <div class="recipe_control-btn recipe_control-btn_prev">⯇</div>
                     </div>
                 </div>
                 <form id="search-highlight" class="mb-1">
