--- a/main/index.html
+++ b/main/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -60,11 +59,11 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/prashantchaudhary/ddslick/master/jquery.ddslick.min.js" ></script>
-    <script type="module" src="js/select.js"></script>
-    <script type="module" src="js/search.js"></script>
-    <script type="module" src="js/categories.js"></script>
-    <script type="module" src="js/craft_dbv.js"></script>
-    <script type="module" src="js/craft_dbr.js"></script>
+    <script type="module" src="./js/select.js"></script>
+    <script type="module" src="./js/search.js"></script>
+    <script type="module" src="./js/categories.js"></script>
+    <script type="module" src="./js/craft_dbv.js"></script>
+    <script type="module" src="./js/craft_dbr.js"></script>
 </body>
 
 </html>
